[package]
name = "pico-blink"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp235x-hal = { version = "0.3.0", features = ["rt", "critical-section-impl"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1